# Signal

./: Cargo.toml  README.md  db.sqlite  lol.txt
src/: main.rs
src/database/: sqlite.rs
src/services/: arxiv.rs  businesstimes.rs  cna.rs  mod.rs  straitstimes.rs
src/tui/: app.rs  display.rs  mod.rs
src/tui/tabs/: mod.rs  news.rs  papers.rs
src/utils/: cna_model.rs  fuzzy.rs  helper.rs  mod.rs  news_model.rs  papers_model.rs  sidebar.rs  time_formatter.rs
