[package]
name = "signal"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
jiff = "0.2.23"
ratatui = "0.30.0"
ratatui-textarea = "0.8.0"
reqwest = "0.13.2"
rss = "2.0.12"
atom_syndication = "0.12"
scraper = "0.25.0"
sqlite = "0.37.0"
tokio = { version = "1.50.0", features = ["full"]}
tui-widget-list = "0.15.0"
webbrowser = "1.2.0"
